--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Real time stock quote data using yahoo-stocks.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pretest": "eslint --ignore-path .gitignore ."
   },
   "repository": {
     "type": "git",
