added rules section in .eslintrc.json

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
     "parserOptions": {
         "ecmaVersion": 6
     },
-    "indent": ["error", 4]
-
+    "rules": {
+        "indent": ["error", 4]
+    }
 }
