--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "scrip"
   ],
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "eslint": "^4.19.1",
     "eslint-config-strongloop": "^2.1.0"
   }
