--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
     "printWidth": 80,
     "semi": true,
     "singleQuote": true,
-    "trailingComma": "es5"
+    "trailingComma": "es5",
     "useTabs": false,
     "tabWidth": 4,
     "editor.formatOnSave": true
