updates to package.json

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,5 @@
     "singleQuote": true,
     "trailingComma": "es5",
     "useTabs": false,
-    "tabWidth": 4,
-    "editor.formatOnSave": true
+    "tabWidth": 4
 }
