--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   ],
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.0.0",
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^4.19.1",
     "eslint-config-strongloop": "^2.1.0",
