--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Real time stock quote data using yahoo-stocks.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "pretest": "eslint --ignore-path .gitignore .",
-    "fmt": "prettier --write {index.js,README.md}"
+    "pretest": "eslint",
+    "precommit": "eslint",
+    "fmt": "prettier --write {index.js,README.md}",
+    "build": "microbundle"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^4.19.1",
     "eslint-config-strongloop": "^2.1.0",
+    "microbundle": "^0.4.4",
     "prettier": "1.12.1"
   }
 }
